Fix pagination collapses

--- a/app/assets/stylesheets/themes/default/_pagination.scss
+++ b/app/assets/stylesheets/themes/default/_pagination.scss
@@ -19,6 +19,11 @@
     display: inline-block;
     font-size: $default-font-size - 2;
 
+    @include media($iphone5less) {
+      font-size: 12px;
+      margin: 0;
+    }
+
     @include media($mobile) {
       margin: 0;
     }
